--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -122,7 +122,7 @@
 
 
       <% for(listing of allListings){ %>
-        <a href="http://localhost:8080/listings/<%= listing.id %>">
+        <a href="/listings/<%= listing.id %>">
 
           <div class="card listing-card">
             <img src="<%= listing.image.url %>" class="card-img-top" alt="listing image" style="height: 20rem;">
