--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -32,7 +32,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/listings">Explore</a>
+          <a class="nav-link" href="/">Explore</a>
         </div>
 
         <div class="ms-auto search-div">
