--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -46,63 +46,63 @@
     </style>
     <!-- <div class="container"> -->
       <div class="filters">
-        <a href="http://localhost:8080/listings/trending">
+        <a href="/listings/trending">
           <div class="filter">
             <div><i class="fa-solid fa-fire"></i></div>
             <p>Trending</p>
           </div>
         </a>
 
-        <a href="http://localhost:8080/listings/rooms">
+        <a href="/listings/rooms">
           <div class="filter">
             <div><i class="fa-solid fa-bed"></i></div>
             <p>Rooms</p>
           </div>
         </a>
 
-        <a href="http://localhost:8080/listings/iconic-cities">
+        <a href="/listings/iconic-cities">
           <div class="filter">
             <div><i class="fa-solid fa-city"></i></div>
             <p>Iconic cities</p>
           </div>
         </a>
 
-        <a href="http://localhost:8080/listings/mountains">
+        <a href="/listings/mountains">
           <div class="filter">
             <div><i class="fa-solid fa-mountain"></i></div>
             <p>fa-mountains</p>
           </div>
         </a>
 
-        <a href="http://localhost:8080/listings/amazing-pools">
+        <a href="/listings/amazing-pools">
           <div class="filter">
             <div><i class="fa-solid fa-person-swimming"></i></div>
             <p>Amazing pools</p>
           </div>
         </a>
 
-        <a href="http://localhost:8080/listings/castle">
+        <a href="/listings/castle">
           <div class="filter">
             <div><i class="fa-brands fa-fort-awesome"></i></div>
             <p>Castles</p>
           </div>
         </a>
 
-        <a href="http://localhost:8080/listings/camping">
+        <a href="/listings/camping">
           <div class="filter">
             <div><i class="fa-solid fa-campground"></i></div>
             <p>Camping</p>
           </div>
         </a>
 
-        <a href="http://localhost:8080/listings/farm">
+        <a href="/listings/farm">
           <div class="filter">
             <div> <i class="fa-solid fa-cow"></i></div>
             <p>Farm</p>
           </div>
         </a>
 
-        <a href="http://localhost:8080/listings/arctic">
+        <a href="/listings/arctic">
           <div class="filter">
             <div> <i class="fa-regular fa-snowflake"></i></div>
             <p>Arctic</p>
