--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -21,7 +21,7 @@
                                     <%= listingg.location %> <br>
                                         <%= listingg.country %>
                                             <div class="button">
-                                                    <a href="http://localhost:8080/listings/edit/<%= listingg.id %>"><button
+                                                    <a href="/listings/edit/<%= listingg.id %>"><button
                                                         class="btn add-btn">Update</button></a>
 
                                                  <form method="POST"
