--- a/views/layouts/body.ejs
+++ b/views/layouts/body.ejs
@@ -3,7 +3,7 @@
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2 row-cols-xs-1 offset-2">
     
     <% for(listing of allListings){ %>
-        <a href="http://localhost:8080/listings/<%= listing.id %>">
+        <a href="/listings/<%= listing.id %>">
 
         <div class="card listing-card" >
             <img src="<%= listing.image.url %>" class="card-img-top" alt="listing image" style="height: 20rem;">
