--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -4,7 +4,7 @@
     <h3 class="heading offset-2">Enter the details for new listing</h3>
     <div class="row">
       <div class="col-8 offset-2">
-        <form action="/listings" method="post" novalidate class="needs-validation" enctype="multipart/form-data">
+        <form action="/listings/newest" method="post" novalidate class="needs-validation" enctype="multipart/form-data">
           <label for="title">Enter Titles</label>
           <input type="text" name="listing[title]" id="title" placeholder="Ex.Ski-In/Ski-Out Chalet"
             class="form-control" required>
