some changes added

--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -17,7 +17,7 @@
 
 
           <label for="url">Upload Listing Image</label>
-          <input type="file" name="listing[image]" id="url" placeholder="Enter image URL/Link" class="form-control">
+          <input type="file" name="listing[imgurl]" id="url" placeholder="Enter image URL/Link" class="form-control">
 
 
           <div class="row">
